<resources>
    <string name="app_name">Notes</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="about_the_app">Note Taker is an innovative solution that helps you keep records of all event and remind you at the appropriate time</string>
    <string name="how_it_works">Step to add a note:</string>
    <string name="how_it_works1">1. At the bottom of the screen ,      touch Take a note.</string>
    <string name="how_it_works2">2. To add a title, touch Title.</string>
    <string name="how_it_works3">3. To enter text, touch Note.</string>
    <string name="how_it_works4">4. To save your note, touch the back arrow in the top-left.</string>
    <string name="title_activity_add_note">Add Note</string>
    <string name="title">title</string>
    <string name="title1">title</string>
    <string name="time">time</string>
    <string name="popup">mPopup</string>
    <string name="setForceShowIcon">setForceShowIcon</string>
    <string name="yes">yes</string>
    <string name="no">No</string>
    <string name="close">Close</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="save2">Save</string>
    <string name="cancel1">Cancel</string>
</resources>
